API sync for next-gen buffer management